--- a/public/css/stageCamera.css
+++ b/public/css/stageCamera.css
@@ -6,7 +6,39 @@ html, body
 	height: 100%;
 }
 
+.basic-wrapper
+{
+	width: 100%;
+	height: 100%;
+	position: absolute;
 
+	overflow: hidden;
+
+	/*https://coolors.co/app*/
+	background: #009fb7;
+}
+
+.basic-inner
+{
+	width: inherit;
+	height: inherit;
+
+	position: relative;
+}
+
+.camera
+{
+	width: 50%;
+	height: 50%;
+
+	position: absolute;
+
+	left: 50%; top: 50%;
+
+	transform: translate(-50%, -50%);
+
+	border: 20px solid #fff;
+}
 
 
 
