--- a/public/css/stageCamera.css
+++ b/public/css/stageCamera.css
@@ -95,6 +95,8 @@ html, body
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 100%;
+	
+	outline: 1px solid #000;
 }
 
 .section
@@ -102,6 +104,16 @@ html, body
 	position: absolute;
 
 	background: rgba(255, 0, 51, 0.5);
+}
+
+.blend
+{
+	width: inherit;
+	height: inherit;
+	
+	position: absolute;
+	
+	box-shadow: inset 0 0 150px rgba(0, 0, 0, 1);
 }
 
 .edge
