Identifiers added, notes on directions and basic path

--- a/public/css/stageCamera.css
+++ b/public/css/stageCamera.css
@@ -32,6 +32,22 @@ html, body
 	user-select: none;
 }
 
+.dev p
+{
+	font-size: 14px;
+	position: absolute;
+	
+	font-family: sans-serif;
+	font-weight: 100;
+	line-height: 1;
+	
+	display: block;
+	left: 50%; top: 50%;
+	transform: translate(-50%, -50%);
+	
+	color: #000;
+}
+
 .basic-wrapper
 {
 	width: 100%;
@@ -189,6 +205,22 @@ html, body
 	position: absolute;
 
 /* 	background: rgba(255, 0, 51, 0.5); */
+}
+
+.section p
+{
+	font-size: 24px;
+	position: absolute;
+	
+	font-family: sans-serif;
+	font-weight: 100;
+	line-height: 1;
+	
+	display: block;
+	left: 50%; top: 50%;
+	transform: translate(-50%, -50%);
+	
+	color: #fff;	
 }
 
 .blend
