--- a/public/css/stageCamera.css
+++ b/public/css/stageCamera.css
@@ -5,79 +5,16 @@
 	user-select: none;
 }
 
-html, body
-{
-	width: 100%;
-	height: 100%;
-}
-
-.dev
-{
-	width: inherit;
-	position: absolute;
-}
-
-.dev ul
-{
-	width: inherit;
-
-	position: relative;
-}
-
-.dev li
-{
-	width: 40px;
-	height: 40px;
-	margin: 10px 0 0 10px;
-	position: relative;
-	display: inline-block;
-	background: pink;
-	border-radius: 50%;
-	cursor: pointer;
-	user-select: none;
-}
-
-.dev p
-{
-	font-size: 14px;
-	position: absolute;
-	
-	font-family: sans-serif;
-	font-weight: 100;
-	line-height: 1;
-	
-	display: block;
-	left: 50%; top: 50%;
-	transform: translate(-50%, -50%);
-	
-	color: #000;
-	
-	pointer-events: none;
-}
-
-.basic-wrapper
-{
-	width: 100%;
-	height: 100%;
-	position: absolute;
-
-	overflow: hidden;
-
-	/*https://coolors.co/app*/
-	background: #009fb7;
-}
-
-.basic-inner
-{
-	width: inherit;
-	height: inherit;
-
-	position: relative;
-}
-
 .tween
 {
 	backface-visibility: none;
+}
+
+.destroy
+{
+	width: 0 !important;
+	height: 0 !important;
+	visibility: hidden !important;
 }
 
 .camera
@@ -116,35 +53,33 @@ html, body
 	left: 50%; top: 50%;
 	
 	transform: translate(-50%, -50%);
-	
-/* 	background: blue; */
 }
 
-.btn-u
+.ui-u
 {
 	left: 50%; top:0;
 	transform: translate(-50%, 0);	
 }
 
-.btn-d
+.ui-d
 {
 	left: 50%; bottom: 0;
 	transform: translate(-50%, 0);
 }
 
-.btn-l
+.ui-l
 {
 	left: 0; top: 50%;
 	transform: translate(0, -50%);
 }
 
-.btn-r
+.ui-r
 {
 	right: 0; top: 50%;
 	transform: translate(0, -50%);
 }
 
-.btn-default
+.ui-default
 {
 	opacity: 0;
 	cursor: default !important;
@@ -202,13 +137,6 @@ html, body
 
 	position: absolute;
 	left: 0; top: 0;
-
-/*
-	background-image: url(../img/bg.jpg);
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: 100%;
-*/
 	
 	background: #F45866;
 	
@@ -218,8 +146,6 @@ html, body
 .section
 {
 	position: absolute;
-
-/* 	background: rgba(255, 0, 51, 0.5); */
 }
 
 .section p
@@ -289,8 +215,8 @@ html, body
 {
 	.camera
 	{
-		width: 50%;
-		height: 50%;
+		width: 70%;
+		height: 70%;
 	}
 }
 
@@ -299,7 +225,7 @@ html, body
 {
 	.camera
 	{
-		width: 50%;
-		height: 50%;
+		width: 70%;
+		height: 70%;
 	}
 }
