--- a/public/css/stageCamera.css
+++ b/public/css/stageCamera.css
@@ -3,6 +3,8 @@
 *
 {
 	user-select: none;
+	-webkit-touch-callout: none;
+	touch-callout: none;
 }
 
 .tween
@@ -96,6 +98,8 @@
 	background: yellow;
 	
 	user-select: none;
+	-webkit-touch-callout: none;
+	touch-callout: none;
 	
 	cursor: pointer;
 	
